--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>Angular 2 QuickStart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css">
   <link rel="stylesheet" href="styles.css">
 
   <!-- 1. Load libraries -->
@@ -14,6 +15,7 @@
   <script src="node_modules/systemjs/dist/system.src.js"></script>
   <script src="node_modules/rxjs/bundles/Rx.js"></script>
   <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+  <script src="node_modules/materialize-css/dist/js/materialize.min.js"></script>
 
   <!-- 2. Configure SystemJS -->
   <script>
@@ -32,6 +34,8 @@
 
 <!-- 3. Display the application -->
 <body>
-<my-app>Loading...</my-app>
+  <div class="container">
+    <my-app>Loading...</my-app>
+  </div>
 </body>
 </html>
