--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Angular 2 QuickStart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/tcrs.css">
 
   <!-- 1. Load libraries -->
   <!-- IE required polyfills, in this exact order -->
