--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-  <title>Angular 2 QuickStart</title>
+  <title>TCRS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="jspm_packages/npm/materialize-css@0.97.6/bin/materialize.css">
-  <link rel="stylesheet" href="css/tcrs.css">
+  <link rel="stylesheet" href="tcrs.css">
 
   <!-- 1. Load libraries -->
   <!-- IE required polyfills, in this exact order -->
@@ -33,7 +33,7 @@
         }
       }
     });
-    System.import('app/main')
+    System.import('main')
       .then(null, console.error.bind(console));
   </script>
 </head>
