--- a/app/app/app/app.html
+++ b/app/app/app/app.html
@@ -4,9 +4,12 @@
   <span>Tennis Court Reservation System</span>
 </md-toolbar>
 
+<router-outlet></router-outlet>
+<!--
 <div class="app-content">
   <calendar-navigator [startDay]="startDay" [endDay]="endDay"></calendar-navigator>
   <calendar></calendar>
 </div>
+-->
 
 
